--- a/setup.yml
+++ b/setup.yml
@@ -10,8 +10,8 @@ KEYWORDS: fields, web scrapping
 
 HOME: https://skyant.dev/projects/scrapper
 DONATE: https://buymeacoffee.com/skyantdev
-NEWS: https://twitter.com/skyantdev
-TALK: https://gitter.im/skyantdev/scrapper
+NEWS: https://www.linkedin.com/company/skyantdev
+TALK: https://groups.google.com/a/skyant.dev/g/community?label=data
 
 AUTHOR: Iurii Tarasenko
 EMAIL: info@skyant.dev
