#2;  fixed link to Google Group; /spend 5m /close

--- a/setup.yml
+++ b/setup.yml
@@ -11,7 +11,7 @@ KEYWORDS: fields, web scrapping
 HOME: https://skyant.dev/projects/scrapper
 DONATE: https://buymeacoffee.com/skyantdev
 NEWS: https://www.linkedin.com/company/skyantdev
-TALK: https://groups.google.com/a/skyant.dev/g/community?label=data
+TALK: https://groups.google.com/a/skyant.dev/g/community?label=scrapper
 
 AUTHOR: Iurii Tarasenko
 EMAIL: info@skyant.dev
