--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,10 +13,8 @@ build-job:
     environment:
         name:   GitLab
         action: prepare
-    variables:
-        include: pypi/vars-ci.yml
     script:
-        -   if [[ "$CI_COMMIT_REF_NAME" == "main" ]]; then export BUILD_SUFIX=""; else export BUILD_SUFIX="dev"; fi;
+        -   if [[ "$CI_COMMIT_REF_NAME" == "main" ]]; then export BUILD_SUFFIX=""; else export BUILD_SUFFIX="dev"; fi;
         -   pip3 install --upgrade pip wheel build pyyaml markdown;
         -   python3 -m build --no-isolation .;
     artifacts:
@@ -40,7 +38,6 @@ deploy2gitlab:
 
 
 
-
 deploy2pypi:
     stage:  deploy
     image:  python:3.10-slim
@@ -59,3 +56,4 @@ deploy2pypi:
             --repository-url https://upload.pypi.org/legacy/ 
             --username __token__ 
             --password $PYPIORG_TOKEN dist/*
+
