--- a/setup.yml
+++ b/setup.yml
@@ -3,7 +3,8 @@ MODULES:
     -   skyant.scrapper
     -   skyant.scrapper.catalog
 
-VERSION: 1.0
+VERSION: 0.0
+MINOR: 1
 
 DESCR: Hi-Level fields.
 KEYWORDS: fields, web scrapping
@@ -11,7 +12,7 @@ KEYWORDS: fields, web scrapping
 HOME: https://skyant.dev/projects/scrapper
 DONATE: https://buymeacoffee.com/skyantdev
 NEWS: https://www.linkedin.com/company/skyantdev
-TALK: https://groups.google.com/a/skyant.dev/g/community?label=data
+TALK: https://groups.google.com/a/skyant.dev/g/community?label=scrapper
 
 AUTHOR: Iurii Tarasenko
 EMAIL: info@skyant.dev
