--- a/setup.yml
+++ b/setup.yml
@@ -4,15 +4,13 @@ MODULES:
     -   skyant.scrapper.catalog
 
 VERSION: 0.0
-MINOR: 1
+MINOR: 2
 
 DESCR: Hi-Level fields.
 KEYWORDS: fields, web scrapping
 
-HOME: https://skyant.dev/projects/scrapper
-DONATE: https://buymeacoffee.com/skyantdev
-NEWS: https://www.linkedin.com/company/skyantdev
-TALK: https://groups.google.com/a/skyant.dev/g/community?label=scrapper
+HOME: https://skyant.dev
+DOCUMENTATION: https://docs.skyant.dev/projects/shell
 
 AUTHOR: Iurii Tarasenko
 EMAIL: info@skyant.dev
